--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@ h1 {
   text-align: center;
 }
 
-#color-palette {
-  width: 250px;
-  height: 50px;
-}
-
 .color {
   display: inline-block;
   border: 1px solid black;
@@ -14,30 +9,8 @@ h1 {
   height: 50px;
 }
 
-.red {
-  background-color: red;
-}
-
-.blue {
-  background-color: blue;
-}
-
-.green {
-  background-color: green;
-}
-
-.black {
-  background-color: black;
-}
-
-.white {
-  background-color: white;
-}
-
 .line {
   display: block;
-  width: 300px;
-  height: 40px;
 }
 
 .pixel {
@@ -47,15 +20,11 @@ h1 {
   height: 40px;
 }
 
-.selected {
-  border: 1px solid black;
-}
-
-#pixel-board {
-  border: 20px solid white;
-}
-
 #btn-container {
   padding-top: 20px;
   display: inline-block;
+}
+
+#pixel-board {
+  line-height: 0;
 }
