--- a/style.css
+++ b/style.css
@@ -1,26 +1,42 @@
-#title {font-family: 'Montserrat', sans-serif;
-font-size: 100px;
-text-align: center;
-text-decoration: black wavy underline;}
+#title {font-family: Montserrat, sans-serif;
+  font-size: 100px;
+  text-align: center;
+  text-decoration: black wavy underline;}
 
-#color-palette{position: relative;
-    margin-right: auto;
-    margin-left: auto;
-    width: 526px;
+#color-palette {position: relative;
+  margin-right: auto;
+  margin-left: auto;
+  width: 220px;
+  padding: 30px;
 }
 
 .color {border: solid black 1px;
-height: 100px;
-width: 100px;
-display: inline-block;
-position: relative;
-margin-right: auto;
-margin-left: auto;
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-#c1 {background-color: black;}
-#c2 {background-color:rgb(222, 109, 32)}
-#c3 {background-color: rgb(255, 212, 177)}
-#c4 {background-color: rgb(208, 202, 176)}
+#c1 { background-color: black;}
 
+#c2 { background-color: rgb(222, 109, 32);}
 
+#c3 { background-color: rgb(255, 212, 177);}
+
+#c4 { background-color: rgb(208, 202, 176);}
+
+#pixel-board {
+  margin: auto;
+  width: 200px; /** deixa a div centralizada pois delimita o tamanho da div **/
+  height: 200px; /** : 200px = 40*5 => tamanho*n. de pixels **/
+}
+
+.pixel { border: solid black 1px;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  margin: -3px; /** retira os espaços entre os pixels **/
+}
