--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 .pixel {
-  width: 38px;
-  height: 38px;
+  width: 40px;
+  height: 40px;
   background-color: white;
   display: inline-block;
   border: 1px black solid
-  
- 
-}
+  }
 
 #pixel-board {
-  width: 200px;
-  height: 200px;
+  display: inline-block;
+  width: 210px;
+  height: 210px;
   font-size: 0px;
   border: 5px solid black;
+ 
+  margin-top: 20px;
 }
 
 #title{
@@ -32,8 +33,14 @@ main {
   height: 100px;
   width: 100px;
 }
+li:hover{
+  cursor: pointer;
+  align-items: 
+}
 
 #bk {
+  width: 80px;
+  height: 80px;
   background-color: black;
   border-style: solid;
   border-color: black;
@@ -42,6 +49,8 @@ main {
 }
 
 #r {
+  width: 80px;
+  height: 80px;
   background-color: red;
   border-style: solid;
   border-color: black;
@@ -49,6 +58,8 @@ main {
   display: inline-block;
 }
 #b {
+  width: 80px;
+  height: 80px;
   background-color: blue;
   border-style: solid;
   border-color: black;
@@ -57,6 +68,8 @@ main {
 }
 
 #g {
+  width: 80px;
+  height: 80px;
   background-color: green;
   border-style: solid;
   border-color: black;
