--- a/style.css
+++ b/style.css
@@ -31,21 +31,10 @@ h1 {
   margin: 20px;
 }
 
-.first-color {
+.color:first-child {
   background-color: black;
 }
 
-.random1 {
-  background-color: blue;
-}
-
-.random2 {
-  background-color: brown;
-}
-
-.random3 {
-  background-color: yellow;
-}
 .container {
   margin-left: auto;
   margin-right: auto;
