--- a/style.css
+++ b/style.css
@@ -8,3 +8,13 @@ body {
   width: 50px;
   height: 50px;
 }
+
+.pixel {
+  background-color: white;
+  border: 1px solid black;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  margin-right: -1px;
+  margin-bottom: -5px;
+}
