--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
 }
+#title{
+  text-align: center;
+  text-decoration: underline;
+}
+
+
 .color {
   display: inline-block;
   border: 1px solid black;
@@ -9,20 +15,26 @@
   width: 50px;
 }
 
-.first{
+#first{
   background-color:black;
 }
 
-.second {
+#second {
   background-color: red;
 }
 
-.third{
-  background-color:blue
+#third{
+  background-color:blue;
 }
 
-.fourth{
-  background-color: green
+#fourth{
+  background-color: green;;
+}
+
+#pixel-board{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .pixel{
@@ -31,4 +43,7 @@
   width: 40px;
   border: 1px solid black;
   background-color: white;
+}
+.line{
+  height: 40px;
 }
