--- a/style.css
+++ b/style.css
@@ -1,32 +1,32 @@
 #color-palette {
-    display: flex;
-    border: 1px solid rgb(0, 0, 0);
+  display: inline-flex;
 }
 
-.color1 {
-    border: 1px solid rgb(0, 0, 0);
+ div:nth-of-type(1) {
+    border: 1px solid black;
     background-color: #4773ec;
     height: 150px;
-    width: 150px;
+    width: 500px;
   }
 
-.color2 {
-    border: 1px solid rgb(0, 0, 0);
-    background-color: #E7042A;
+div:nth-of-type(2) {
+    border: 1px solid black;
+    background-color: black;
     height: 150px;
-    width: 150px;
+    width: 500px;
   }
 
-.color3 {
-    border: 1px solid rgb(0, 0, 0);
+div:nth-of-type(3) {
+    border: 1px solid black;
     background-color: #FED200;
     height: 150px;
-    width: 150px;
+    width: 500px;
   }
 
-.color4 {
-    border: 1px solid rgb(0, 0, 0);
+div:nth-of-type(4) {
+    border: 1px solid black;
     background-color: #2C6A45;
     height: 150px;
-    width: 150px;
+    width: 500px;
   }
+ */
