--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .color {
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   margin: 10px;
   border: 1px solid black;
   display: inline-block;
@@ -18,10 +18,11 @@ body {
 
 #pixel-board {
   margin: 10px;
+  line-height: 0px;
 }
 .pixel {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: 1px solid black;
   display: inline-block;
 }
