--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 #color-palette {
-    width: 50%;
+  width: 50%;
 }
 
 .color {
-    border: solid 1px black;
-    width: 90px;
-    height: 90px;
-    display: inline-block;
+  border: solid 1px black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+}
+
+#pixel-board {
+  border: solid 1px black;
+  width: 205px;
+  height: 204px;
+}
+
+.pixel {
+  border: solid 1px black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  margin: -1px -1px -4px 0;
+  background-color: white;
 }
