terceiro requisito colocar black como primeiro

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ border: solid black 1px;
 display: inline;
 }
 
-#green {
-    background-color: green;
+#black {
+    background-color: black;
 }
 
 #red {
