--- a/style.css
+++ b/style.css
@@ -1,27 +1,14 @@
-.pixel  {
+.pixel {
   height: 40px;
   width: 40px;
   display: inline-block;
   border: solid black 1px;
   background-color: white;
 }
+
 .black {
- background-color:black;
+  background-color: black;
 }
-
-.color1{
-  background-color: red;
-}
-
-.color2 {
-  background-color: blue;
-}
-
-.color3 {
-background-color: green;
-  
-}
-
 
 .color {
   margin-right: 5px;
@@ -33,9 +20,9 @@ background-color: green;
 }
 
 .line {
-  width: 300px
+  width: 3000px;
 }
 
-#pixel-board{
+#pixel-board {
   margin-top: 100px;
 }
