--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 .color {
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-    border: 1px solid black;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  border: 1px solid black;
 }
+
 #paleta1 {
-    background-color: #000;
+  background-color: black;
 }
 
 #paleta2 {
-    background-color: #219ebc;
+  background-color: #219ebc;
 }
 
 #paleta3 {
-    background-color: #069e2d;
+  background-color: #069e2d;
 }
 
 #paleta4 {
-    background-color: #dc2f02;
+  background-color: #dc2f02;
 }
 
 .pixel {
-    height: 40px;
-    width: 40px;
-    border: 1px solid black;
+  height: 40px;
+  width: 40px;
+  border: 1px solid black;
 }
 
 #pixel-board {
-    margin-right: 500px;
-    display: grid;
-    grid-template-columns: repeat(5, 0fr);
+  margin-right: 500px;
+  display: grid;
+  grid-template-columns: repeat(5, 0fr);
 }
