--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@
   background-color: white;
 }
 
+h3 {
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin-bottom: 0;
+  margin-top: 10px;
+}
+
+h5 {
+  margin-top: 6px;
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
 .line {
   height: 41px;
 }
@@ -22,4 +37,9 @@
   margin-bottom: 20px;
   height: 40px;
   width: 172px;
+}
+
+#board-size {
+  width: 178px;
+  margin-bottom: 25px;
 }
