--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ todos os elementos https://developer.mozilla.org/pt-BR/docs/Web/CSS/:nth-child *
   width: 50px;
   height: 50px;
   margin-block: -3px;
-  color: white;
+  background-color: white;
 }
 
 #pixel-board {
