--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body {
+* {
+  margin: 0 auto;
+  padding: 0;
   text-align: center;
 }
 
@@ -10,6 +12,8 @@ body {
   display: inline-block;
   text-align: center;
   width: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 .color {
@@ -18,3 +22,40 @@ body {
   width: 60px;
   height: 60px;
 }
+
+.color:nth-child(1) {
+  background-color: black;
+}
+
+.color:nth-child(2) {
+  background-color: red;
+}
+
+.color:nth-child(3) {
+  background-color: green;
+}
+
+.color:nth-child(4) {
+  background-color: blue;
+}
+
+#pixel-board {
+  display: inline-block;
+  text-align: center;
+  width: 220px;
+  height: 220px;
+  border: black solid 1px;
+  padding: 10px;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+
+.pixel {
+  display: inline-block;
+  border: black solid 1px;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  margin-bottom: -4px;
+}
+
