--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
 } 
 
 .main {
   background-color: gainsboro;
+  margin-bottom: 10px;
 }
 
 .color {
@@ -20,6 +22,7 @@ body {
   margin: 10px;
   line-height: 0px;
 }
+
 .pixel {
   width: 40px;
   height: 40px;
