--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@
 }
 
 h1 {
-  font-family: nos, monospace;
   border: solid 3px white;
   padding: 30px;
   color: white;
@@ -47,6 +46,7 @@ h1 {
 }
 
 body {
+  font-family: nos, monospace;
   text-align: center;
   background-image: url('games.jpg');
 }
@@ -67,7 +67,6 @@ body {
 }
 
 footer {
-  font-family: nos, monospace;
   background-image: url('bot2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -81,4 +80,21 @@ footer {
 
 p {
   padding: 20px;
+}
+
+button {
+  font-family: monospace;
+  border-radius: 10px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  background-color: rgba(0, 0, 0, 0.842);
+  color: white;
+}
+
+#board-size {
+  padding: 15px 32px;
+  margin-right: 20px;
 }
