--- a/style.css
+++ b/style.css
@@ -18,7 +18,14 @@
 #yellow {
   background-color: yellow;
 }
-
+#pixel-board {
+ height: auto;
+ width: auto;
+ display: block;
+}
 .pixel {
-  background-color: white;  
+  background-color: white; 
+  border: solid black 1px;
+  height: 40px;
+  width: 40px;
 }
