--- a/style.css
+++ b/style.css
@@ -1,36 +1,38 @@
 #black {
-    background-color: black;
-    }
-    
-    #blue {
-    background-color: blue;
-    }
-    
-    .color {
-    border: black solid 1px;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    }
-    
-    #pixel-board .line {
-    display: flex;
-    }
-    
-    .pixel {
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    border: black solid 1px;
-    display: inline-block;
-    
-    }
-    
-    #purple {
-    background-color: purple;
-    }
-    
-    #red {
-    background-color: red;
-    }
-    
+  background-color: black;
+}
+
+#blue {
+  background-color: blue;
+}
+
+.color {
+  border: black solid 1px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+}
+
+h1 {
+  text-align: center;
+}
+
+#pixel-board .line {
+  display: flex;
+}
+
+.pixel {
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: black solid 1px;
+  display: inline-block;
+}
+
+#purple {
+  background-color: purple;
+}
+
+#red {
+  background-color: red;
+}
