--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     border-radius: 50%;
     display: inline-flex;
     margin: 5px;
-    background-color: black;
+    
     border: black solid 1px;
     margin-bottom: 10px;
 }
@@ -13,8 +13,10 @@
     height: 40px;
     display: inline-block;
     border: black solid 1px;
-    line-height: 0;
-    background-color: white;
+    background-color: rgb(255, 255, 255)
     
   
+}
+#pixel-board{
+    line-height: 0px;
 }
