--- a/style.css
+++ b/style.css
@@ -1,10 +1,57 @@
 * {
   border: 0;
+  font-family: Montserrat, sans-serif;
   margin: 0;
   padding: 0;
 }
 
+body {
+  height: 100vh;
+}
+
+header {
+  /* background-image: url(images/square-2724387_1280.jpg);
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: 160px; */
+  /* height: 100px; */
+}
+
+header img {
+  display: block;
+  width: 150px;
+}
+
+.img1 {
+  float: left;
+}
+
+.img2 {
+  float: right;
+  transform: scale(-1, 1);
+  text-align: end;
+}
+
+header h1 {
+  display: block;
+  font-size: 3em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 30px;
+}
+
+header h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
 main {
+  clear: both;
+  margin-top: 60px;
   text-align: center;
 }
 
@@ -15,20 +62,8 @@ main {
   width: 40px;
 }
 
-.red {
-  background-color: red;
-}
-
 .black {
   background-color: black;
-}
-
-.green {
-  background-color: green;
-}
-
-.yellow {
-  background-color: yellow;
 }
 
 .pixel-line {
@@ -62,5 +97,19 @@ main {
   border: 1px solid black;
   height: 25px;
   text-align: center;
-  width: 60px;
+  width: 80px;
+}
+
+a {
+  text-decoration: none;
+}
+
+footer {
+  margin-top: 10px;
+}
+
+footer div {
+  font-size: 0.7em;
+  padding: 20px;
+  text-align: center;
 }
