--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-#title{
+
+#title {
   text-align: center;
   text-decoration: underline;
 }
@@ -15,36 +16,36 @@
   width: 50px;
 }
 
-#first{
-  background-color:black;
+#first {
+  background-color: black;
 }
 
 #second {
   background-color: red;
 }
 
-#third{
-  background-color:blue;
+#third {
+  background-color: blue;
 }
 
-#fourth{
-  background-color: green;;
+#fourth {
+  background-color: green;
 }
 
-#pixel-board{
+#pixel-board {
   display: flex;
   align-items: center;
   flex-direction: column;
-  
 }
 
-.pixel{
+.pixel {
   display: inline-block;
   height: 40px;
   width: 40px;
   border: 1px solid black;
   background-color: white;
 }
-.line{
+
+.line {
   height: 40px;
 }
