--- a/style.css
+++ b/style.css
@@ -57,3 +57,10 @@ body {
   border: black 1px solid;
   background-color: white;
 }
+
+#clear-board {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
