--- a/style.css
+++ b/style.css
@@ -40,19 +40,19 @@ header {
   display: inline-block;
 }
 
-#black {
+#color1 {
   background-color: black;
 }
 
-#yellow {
+#color2 {
   background-color: yellow;
 }
 
-#blue {
+#color3 {
   background-color: blue;
 }
 
-#green {
+#color4 {
   background-color: green;
 }
 
@@ -69,8 +69,17 @@ header {
   width: 40px;
   height: 40px;
   border: solid black 1px;
-  background-color: white;
   display: inline-block;
   margin: 0;
   top: 0;
+}
+
+#clear-board {
+  border: solid black 2px;
+  border-radius: 5px;
+  text-align: center;
+  margin: 20px auto;
+  width: 60px;
+  height: 18px;
+  background-color: white;
 }
