--- a/style.css
+++ b/style.css
@@ -1,43 +1,99 @@
 body {
   text-align: center;
+  background-color: #fffcf2;
+  font-family: 'Space Mono', monospace;
+  color: #403d39;
+}
+
+#container-title {
+  font-weight: bold;
+  background-color: #403d39;
+  width: 450px;
+  height: 85px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 0px #ccc5b9;
 }
 
 #title {
-  text-align: center;
-}
-
-#color-palette{
-  background-color: rgb(248, 253, 241);
-  width: 225px;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid black;
+  margin-top: 10px;
+  width: 300px;
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+  background-color: #ccc5b9;
+  box-shadow: 3px 3px 0px #eb5e28;
+}
+
+#color-palette {
+  background-color: #403d39;
+  width: 230px;
+  height: 65px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 3px 3px 0px #ccc5b9;
 }
 
 .color {
-  height: 40px;
-  width: 40px;
   border: 1px solid black;
+  width: 40px;
+  height: 40px;
   display: inline-block;
-  margin-top: 5px;
+  margin-top: 10px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 0px #eb5e28;
+}
+
+#container-board {
+  margin-top: 20px;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
+  background-color: #403d39;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 0px #ccc5b9;
+}
+
+#container-button {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+  width: 230px;
+  background-color: #403d39;
+  border-radius: 10px;
+  box-shadow: 3px 3px 0px #ccc5b9;
 }
 
 #pixel-board {
-  display: inline-block;
-  margin-top: 20px;
+  border-radius: 5px;
+} 
+
+#board-size {
+  width: 100px;
 }
 
-.pixel {
+#generate-board {
+  border-radius: 5px;
+}
+
+.lines {
+height: 40px;
+}
+
+ .pixel {
   background-color: white;
   width: 40px;
   height: 40px;
   border: 1px solid black;
-  margin-left: 0;
   display: inline-block;
-}
-
-.line {
- /* height: 40px;*/
+  margin: 0;
 }
