--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
   width: auto;
 }
@@ -18,7 +19,7 @@ h1 {
 }
 
 .black:hover {
-  background-color: rgb(26, 24, 24);
+  background-color: rgb(41, 37, 37);
 }
 
 .red {
@@ -44,3 +45,24 @@ h1 {
 .green:hover {
   background-color: rgb(17, 172, 17);
 }
+
+#clear-board {  
+  background-color: grey;
+  border: 1px solid black;
+  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  margin: 10px 15px;
+  padding: 10px 20px;
+  text-align: center;  
+  width: 50px;
+}
+
+#clear-board:hover {
+  background-color: darkslategray;
+  color: white;
+}
+
+/*
+Irei precisar do input color
+*/
