--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
   text-align: center;
   width: auto;
 }
@@ -46,15 +46,15 @@ h1 {
   background-color: rgb(17, 172, 17);
 }
 
-#clear-board {  
+#clear-board {
   background-color: grey;
   border: 1px solid black;
   color: white;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: bold;
+  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  font-weight: 800;
   margin: 10px 15px;
   padding: 10px 20px;
-  text-align: center;  
+  text-align: center;
   width: 50px;
 }
 
