--- a/style.css
+++ b/style.css
@@ -19,4 +19,32 @@
 }
 #pixel-board{
     line-height: 0px;
+  
+    width: max-content;
+}
+
+#clear-board{
+    box-shadow:inset 0px 0px 14px -3px #f2fadc;
+	background:linear-gradient(to bottom, #dbe6c4 5%, #9ba892 100%);
+	background-color:#dbe6c4;
+	border-radius:36px;
+	border:1px solid #b2b8ad;
+	display:inline-block;
+	cursor:pointer;
+	color:#757d6f;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:8px 20px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #9dd64d;
+    margin-bottom:20px;
+}
+#clear-board:hover{
+    background:linear-gradient(to bottom, #9ba892 5%, #dbe6c4 100%);
+	background-color:#9ba892;
+}
+#clear-board:active{
+    position:relative;
+	top:1px;
 }
