--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@ header {
 
 #color-palette {
   background-color: rgb(165, 165, 165);
-  height: 145px;
+  height: 112px;
   margin-top: 20px;
   padding: 10px;
-  width: 602px;
+  width: 490px;
 }
 
 .color {
   border: 1px solid black;
   display: inline-block;
+  height: 50px;
   padding: 30px;
+  width: 50px;
 }
 
 #black {
@@ -37,12 +39,8 @@ header {
   background-color: purple;
 }
 
-.width-and-height {
-  height: 80px;
-  width: 80px;
-}
-
 #pixel-board {
+  margin-top: 20px;
   width: 500px;
   height: 800px;
   text-align: center;
