--- a/style.css
+++ b/style.css
@@ -3,4 +3,14 @@
     display: inline-block;
     height: 40px;
     width: 40px;
+    margin: 10px;
+}
+
+.pixel {
+    border: 1px solid black;
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    margin: -1px -1px -4px 0;
+    background-color:white;
 }
