--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ body {
   width: 40px;
   height: 40px;
   border: 1px solid black;
-  display: inline-block;
   background-color: white;
+  margin: 1px 2px;
+  display: inline-block;
 }
 
 button {
@@ -38,14 +39,9 @@ button {
 }
 
 input {
-  width: 25px;
-}
-
-#tamanho {
-  display: inline-block;
-  margin: 10px;
+  width: 70px;
 }
 
 #title {
-  margin: 0;
+  margin: 15px;
 }
