--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
-  padding: 0  ;
+  padding: 0;
 }
 
 h1 {
   text-align: center;
 }
+
 .color {
   box-sizing: content-box;
   border: solid black 1px;
@@ -44,7 +45,7 @@ h1 {
 }
 
 .pixel {
-  background-color: #fff;
+  background-color: white;
   display: inline-block;
   width: 40px;
   height: 40px;
