--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
   text-align: center;
   background-color: #fffcf2;
-  font-family: 'Space Mono', monospace;
+  font-family: Space Mono, monospace;
   color: #403d39;
 }
 
 #container-title {
-  font-weight: bold;
   background-color: #403d39;
   width: 450px;
   height: 85px;
@@ -14,7 +13,8 @@ body {
   margin-right: auto;
   margin-top: 10px;
   border-radius: 10px;
-  box-shadow: 3px 3px 0px #ccc5b9;
+  box-shadow: 3px 3px #ccc5b9;
+
 }
 
 #title {
@@ -24,9 +24,10 @@ body {
   margin-top: 10px;
   width: 300px;
   border-radius: 10px;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 10px;
   background-color: #ccc5b9;
-  box-shadow: 3px 3px 0px #eb5e28;
+  box-shadow: 3px 3px #eb5e28;
+
 }
 
 #color-palette {
@@ -38,7 +39,8 @@ body {
   margin-right: auto;
   border-radius: 10px;
   padding: 15px;
-  box-shadow: 3px 3px 0px #ccc5b9;
+  box-shadow: 3px 3px #ccc5b9;
+
 }
 
 .color {
@@ -48,7 +50,8 @@ body {
   display: inline-block;
   margin-top: 10px;
   border-radius: 10px;
-  box-shadow: 3px 3px 0px #eb5e28;
+  box-shadow: 3px 3px #eb5e28;
+
 }
 
 #container-board {
@@ -59,7 +62,8 @@ body {
   background-color: #403d39;
   padding: 25px;
   border-radius: 10px;
-  box-shadow: 3px 3px 0px #ccc5b9;
+  box-shadow: 3px 3px #ccc5b9;
+
 }
 
 #container-button {
@@ -70,30 +74,35 @@ body {
   width: 230px;
   background-color: #403d39;
   border-radius: 10px;
-  box-shadow: 3px 3px 0px #ccc5b9;
+  box-shadow: 3px 3px #ccc5b9;
+
 }
 
 #pixel-board {
   border-radius: 5px;
-} 
+
+}
 
 #board-size {
   width: 100px;
+
 }
 
 #generate-board {
   border-radius: 5px;
+
 }
 
 .lines {
-height: 40px;
+  height: 40px;
+
 }
 
- .pixel {
+.pixel {
   background-color: white;
   width: 40px;
   height: 40px;
   border: 1px solid black;
   display: inline-block;
-  margin: 0;
+
 }
