--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     display: block;
 }
 #color-palette{
+    position: absolute;
+    top: 70px;
     display: block;
     width: 80%;
     border: solid 5px black;
@@ -14,6 +16,8 @@
     height: 40px;
 }
 #pixel-board{
+    position: absolute;
+    top: 200px;
     border: solid 1px black;
     line-height: 0px;
 }
@@ -28,6 +32,8 @@
     display: inline-block;
 }
 
-.botao{
+#clear-board{
+    position: absolute;
+    top: 150px;
     background-color: blanchedalmond;
 }
