quarto, quinto e sexto reguisitos projeto

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .color {
     display: inline-block;
     border: 1px solid black;
-    width: 60px;
-    height: 60px;
+    width: 51px;
+    height: 51px;
 }
 #black {
     background-color: black;
@@ -15,4 +15,11 @@
 }
 #green {
     background-color: green;
+}
+.pixel {
+    background-color: white;
+    display: inline-block;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
 }
