--- a/style.css
+++ b/style.css
@@ -3,34 +3,60 @@
   font-family: monospace;
 }
 
+body {
+  margin: 15px;
+  background-color: rgb(42, 40, 40);
+}
+
+.align {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 3px solid goldenrod;
+  height: 300px;
+  width: 80%;
+  padding: 30px;
+}
+
 h1 {
-  color: goldenrod;
+  margin-top: 20px;
+  color: rgb(238, 184, 46);
   text-align: center;
   font-size: 50px;
 }
 
 .color {
   border: 1px solid black;
-  height: 40px;
-  width: 40px;
-}
-
-#color-palette {
-  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin-bottom: 25px;
 }
 
 .black {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
 }
 
 .red {
-  background-color: rgb(255, 0, 0);
+  background-color: red;
 }
 
 .green {
-  background-color: rgb(0, 255, 0);
+  background-color:  lime;
 }
 
 .blue {
-  background-color: rgb(0, 0, 255);
+  background-color:  blue;
+}
+
+#pixel-board {
+  justify-content: center;
+  display: flex;
+}
+
+.pixel {
+
+  background-color: white;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
