--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
+* {
+  font-family: ubuntu;
+  margin: 0;
+  padding: 0;
+  
+}
+
+#container-title {
+  background-color: rgb(16, 159, 11);
+  height: 5em;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100%;
+  padding: 10px 0;
+}
+
+#title {
+  font-size: 48px;
+}
+
 .color {
-  width: 100px;
-  height: 100px;
+  border-radius: 20%;
   border: 1px solid black;
   display: inline-block;
-}
-
-#colorBlack {
-  background-color: black;
-}
-
-#colorRed {
-  background-color: red;
-}
-
-#colorYellow {
-  background-color: yellow;
-}
-
-#colorGreen {
-  background-color: green;
+  height: 100px;
+  margin-right: 5px;
+  width: 100px;
 }
 
 #pixel-board {
+  font-size: 0;
   padding: 0;
   width: 210px;
-  border: 1px solid red;
 }
 
 .pixel {
