--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  text-align: center;
+}
+
 #title {
   background-color: turquoise;
   padding: 10px;
@@ -10,39 +14,37 @@
 
 .color {
   border: 1px solid black;
+  border-radius: 100%;
   display: inline-block;
   height: 75px;
   width: 75px;
   margin: 15px;
 }
 
-.colorBlack {
+#colorBlack {
   background-color: black;
 }
 
-.colorBlue {
+#colorBlue {
   background-color: blue;
 }
 
-.colorRed {
+#colorRed {
   background-color: red;
 }
 
-.colorGreen {
+#colorGreen {
   background-color: green;
 }
 
 #pixel-board {
-  background-color: white;
-  border: 1px solid black;
-  height: 226px;
-  width: 226px;
+  display: grid;
+  grid-template-columns: repeat(5, 0fr);
 }
 
 .pixel {
   background-color: white;
   border: 1px solid black;
-  display: inline-block;
   height: 40px;
   width: 40px;
 }
