--- a/style.css
+++ b/style.css
@@ -29,10 +29,18 @@ h1 {
   border: solid black 1px;
   display: inline-block;
   margin: 20px;
+  border-radius: 100%;
 }
 
 .color:first-child {
   background-color: black;
+}
+
+.clear-board {
+  display: block;
+  margin: 0 auto 0 auto;
+  border-radius: 30%;
+  padding: 10px;
 }
 
 .container {
