--- a/style.css
+++ b/style.css
@@ -54,9 +54,19 @@
   margin: 1.5%;
 }
 
-#clear-board{
+#clear-board {
   font-family: fantasy;
   font-size: 2em;
   width: 14%;
   padding: 0.3%;
+}
+
+#input-container {
+  text-align: center;
+  margin: 1.5%;
+}
+
+#board-size {
+  width: 157px;
+  text-align: center;
 }
